email and contact form

--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@
               <h2>Contact Me</h2>
               <p>
                 Ready to get started or have questions?  
-                <br/><strong>Email:</strong> <a href="mailto:tylerkorth12@gmail.com">tylerkorth12@gmail.com</a>  
-                <br/><strong>OR</strong> fill out my <a href="https://docs.google.com/forms/d/YOUR_FORM_ID/viewform" target="_blank">Contact Form</a>.
+                <br/><strong>Email:</strong> <a href="mailto:tylertutoring12@gmail.com">tylertutoring12@gmail.com</a>  
+                <br/><strong>OR</strong> fill out my <a href="https://forms.gle/rouAz1K2sgQwBJHw8" target="_blank">Contact Form</a>.
               </p>
-              <!-- <p>
-                Note: Replace <code>YOUR_FORM_ID</code> 
-              </p> -->
+
             </div>
     </div>
   </main>
